endpoints duplication's resolving
